Fix crunchy costumes + broken about page + ugly dropdowns on mobile

--- a/magi/static/less/main.less
+++ b/magi/static/less/main.less
@@ -160,8 +160,13 @@
     }
 }
 @media (max-width: 768px) {
-    .dropdown-header {
-        color: rgba(255, 255, 255, 0.6);
+    .navbar {
+        .dropdown-menu {
+            .dropdown-header.large {
+                background: @secondaryColor;
+                color: white;
+            }
+        }
     }
 }
 
